test/should-fail/vsgc1242.f3
/*
 * @test/compile-error
 */

function lotsOfArgs(one:Integer,two:Integer,three:Integer,four:Integer,five:Integer,six:Integer,seven:Integer,eight:Integer,nine:Integer):Integer{
one+two+three+four+five+six+seven;
}
var sumOfOneToEight = lotsOfArgs(1,2,3,4,5,6,7,8,9);
var ftype:function(:Integer,:Integer,:Integer,:Integer,:Integer,:Integer,:Integer,:Integer,:Integer):Integer = lotsOfArgs; 
